--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+	<head>
 		<meta charset="UTF-8">
-		<title>Document</title>
+		<title>Proyecto Sprint 2</title>
 	</head>
 	<body>
-	<input type="text" id="texto"/>
-	<input type="button" value="Añadir Tarea" id="boton"/>	
+		<h1>Añadir Tareas</h1>
+		<p>Para agregar nuevas tareas escribe en la <strong>cacilla</strong> y dale <strong>click</strong> al boton <strong>Añadir Tarea</strong> <p/> 
+		<ol id="lista">
+		  <li></li>
+		</ol>  
+		<input type="text" id="texto"/>
+		<form class="formulario" action="">
+			<input type="button" value="Añadir Tarea" id="boton"/>
+			<input type="button" value="Traducir Esta Pagina" id="boton"/>
+		</form>	
+		<script src="assets/js/maind.js"></script>
 	</body>
 </html>
