--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
 		<title>Proyecto Sprint 2</title>
 	</head>
 	<body>
-	
 		<h1>Añadir Tareas</h1>
-
 		<p>Para agregar nuevas tareas escribe en la <strong>cacilla</strong> y dale <strong>click</strong> al boton <strong>Añadir Tarea</strong> <p/> 
 		<ol id="lista">
-		  <li></li>
 		</ol>  
 		<input type="text" id="texto"/>
-		<form class="formulario" action="">
+		<form class="formulario" action=""></br>
 			<input type="button" value="Añadir Tarea" id="boton"/>
-			<input type="button" value="Traducir Esta Pagina" id="boton"/>
 		</form>	
 
 		<script src="assets/js/maind.js"></script>
