--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	</head>
 	<body>
 		<h1>Añadir Tareas</h1>
-		<p>Para agregar nuevas tareas escribe en la <strong>cacilla</strong> y dale <strong>click</strong> al boton <strong>Añadir Tarea</strong> <p/> 
+		<p>Para agregar nuevas tareas escribe en la <strong>casilla</strong> y dale <strong>click</strong> al boton <strong>Añadir Tarea</strong> <p/> 
 		<ol id="lista">
 		</ol>  
 		<input type="text" id="texto"/>
-		<form class="formulario" action=""></br>
+		<form class="formulario" action=""></form></br>
 			<input type="button" value="Añadir Tarea" id="boton"/>
 		</form>	
 
